[Add] Add Schema